# build-lidar-2d-bev-data

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
env/: install_packages.sh  start_env.sh
include/: bev2d_helpers.hpp  kitti_helpers.hpp  kitti_oxts.hpp  kitti_sequence.hpp  point_cloud_dim_2d.hpp  transform_xyt.hpp  velodyne_data.hpp
scripts/: gather_kitti_bev_stats.py
src/: CMakeLists.txt  bev2d_helpers.cpp  build_kitti_bev_data.cpp  generate_learn_data.cpp  kitti_helpers.cpp
